# 3D-Graphics-and-Animation

./: .gitignore  Readme.md
Animation/: Readme.md  robot.fbx  wood_palette.fbx
Animation/Robot/: robot.fbx
Animation/Robot_rigged/: robot.fbx
Animation/Wood_box/: woodBox.fbx  wood_box.fbx
Interactive/: .gitignore  CMakeLists.txt  Readme.md  clean.sh
Interactive/Code_Project/: build.sh
Interactive/Code_Project/assets/shaders/: boid.fs  model_pbr.fs  screen.frag  skybox.frag  skybox.vert
Interactive/Code_Project/src/: AppView.hpp  FrameBuffer.hpp  Model.cpp  Model.hpp  PhysicEntity.hpp  Program.h  Skybox.hpp  TestView.hpp  main.cpp
Interactive/assets/: boid.vs  object.fs  object.vs
Interactive/assets/models/floor/: plane.gltf
Interactive/assets/models/maxwell_the_cat/: scene.gltf
Interactive/assets/models/robot/: robot.gltf
Interactive/assets/shaders/: object.fs  screen.frag  screen.vert
Interactive/assets/table/: table.gltf
Interactive/include/: shader.h
Interactive/include/glad/: glad.h
Interactive/src/: AppView.hpp  BloatView.hpp  BoidManager.hpp  Camera.hpp  Context.cpp  Context.hpp  Cubemap.hpp  FrameBuffer.hpp  Model.cpp  Model.hpp  PhysicEntity.hpp  TestView.hpp  Transform.h  View.hpp  glad.c  main.cpp
Render/: Readme.md
Render/Blender_Project_Files_V1/: robot.blend
Render/Blender_Project_Files_V10/: robot.blend
Render/Blender_Project_Files_V2/: robot.blend
Render/Blender_Project_Files_V3/: robot.blend
Render/Blender_Project_Files_V4/: robot.blend
Render/Blender_Project_Files_V5/: robot.blend
Render/Blender_Project_Files_V6/: robot.blend
Render/Blender_Project_Files_V7/: robot.blend
Render/Blender_Project_Files_V8/: robot.blend
(+61 files in other folders)
